Fix responsive layout - sign in links overlapping

--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -1501,3 +1501,23 @@ body, p, h1, h2, h3, h4, h5, h6, a, span, div, table, th, td, blockquote, li, tr
             font-size: 0.1875rem;
             line-height: 0.315789;
         }
+
+        .auth-navigation ul li {
+            margin-bottom: 10px;
+            margin-top: 6px;
+        }
+
+        .service-banner .auth-navigation {
+            margin-right: 0;
+            margin-left: auto;
+            display: inline-block;
+            min-width: 145px;
+        }
+
+        .auth-navigation .govuk-list {
+            font-size: 19px;
+            font-size: .1875rem;
+            line-height: .315789;
+            display: table-cell;
+            vertical-align: baseline;
+        }
